--- a/src/responsive.css
+++ b/src/responsive.css
@@ -61,7 +61,7 @@
   .contact-info {
     width: 100%;
     border-right: none;
-    border-bottom: 1px solid #476c0c;
+    border-bottom: 1px solid #788744;
     padding-bottom: 2rem;
     margin-bottom: 2rem;
   }
