--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,13 @@
 .floral-border::before {
   top: 20px;
   left: 20px;
-  background-image: url('/src/assets/images/floral-corner-1.png');
+  background-image: url('/fondo.png');
 }
 
 .floral-border::after {
   bottom: 20px;
   right: 20px;
-  background-image: url('/src/assets/images/floral-corner-2.png');
+  background-image: url('/fondo.png');
   transform: rotate(180deg);
 }
 
@@ -57,7 +57,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/src/assets/images/pattern-bg.png');
+  background-image: url('/fondo.png');
   background-size: 200px;
   opacity: 0.05;
   z-index: 0;
@@ -84,8 +84,8 @@
 
 /* Estilos para el formulario de contacto */
 .form-input:focus {
-  border-color: #476c0c;
-  box-shadow: 0 0 0 3px rgba(248, 200, 220, 0.3);
+  border-color: #788744;
+  box-shadow: 0 0 0 3px rgba(24, 24, 24, 0.7);
 }
 .hero-moderno {
   position: relative;
